Private Key JWT Authentication Issuer Value
Rename the `getTokenIssuerUrl` method on the `AspspDetails` interface to better describe what the method should actually return, provide a more helpful default implementation, and update the method description as well.